--- a/css/index.css
+++ b/css/index.css
@@ -34,5 +34,52 @@
     text-decoration: none;
     color: white;
 }
+.header-dot-style {
+    color: red;
+    
+}
 
+#about-us {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    background-color: #222323;
+    font-family: var(--second-font-family);
+    color: azure;
+}
+.header-about-us {
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: 800;
+}
+#about-us a {
+    margin: 20px;
+}
+#about-us hr {
+    border: none;
+    height: 2px;
+    background-color: red;
+    margin: 20px;
+    width: 55px;
+    
+}
+#about-us p {
+    padding: 20px 5px 20px 20px;
+    line-height: 20px;
+
+}
+.info-about-us {
+    font-weight: 900;
+}
+
+.social-media-logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 30px;
+}
+footer {
+    background-color: black;
+}
 
