--- a/css/index.css
+++ b/css/index.css
@@ -57,45 +57,60 @@
 }
 
 #about-us {
-    position: relative;
     display: flex;
     flex-direction: row;
-    background-color: #222323;
-    font-family: var(--second-font-family);
-    color: azure;
+    box-sizing: content-box;
 }
-.header-about-us {
-    padding: 20px;
-    text-transform: uppercase;
-    font-size: 50px;
-    font-weight: 800;
-}
-#about-us a {
-    margin: 20px;
-}
-#about-us hr {
-    border: none;
-    height: 2px;
-    background-color: red;
-    margin: 20px;
-    width: 55px;
-    
-}
-#about-us p {
-    padding: 20px 5px 20px 20px;
-    line-height: 20px;
-
-}
-.info-about-us {
-    font-weight: 900;
+#about-us img{  
+    display: flex;
+    max-width: 100%;
 }
 
+.content-about-us {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(44, 37, 37);
+    font-family: 'Bebas Neue', sans-serif;
+}
 .social-media-logo {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content:flex-end;
     padding: 30px;
 }
+.header-about-us {
+    padding-left: 20px;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: 700;
+    color: rgb(248, 248, 248);
+    font-family: 'Bebas Neue', sans-serif;
+}
+ hr {
+    border: none;
+    height: 2px;
+    background-color: rgb(207, 32, 32);
+    margin: 20px;
+    width: 55px;    
+}
+.about-us-main {
+    text-align: justify;
+    line-height: 20px;
+    color: rgb(252, 232, 232);
+    padding: 20px 20px 0px 20px;
+
+
+}
+.info-about-us {
+    color: rgb(252, 232, 232);
+    font-weight: 600;
+    padding: 20px 20px 0px 20px;
+}
+.new-fitness-collection img{
+    width: 100%;
+}
+
+
 footer {
     background-color: var(--accent-color);
     color: white;
