--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,7 @@
     --font-family: 'Bebas Neue', cursive;
     --second-font-family: 'PT Sans', sans-serif;
 }
-
-.return-period p
+.return-period
 {
     text-align: center;
     font-family: var(--font-family);
@@ -24,36 +23,47 @@
 }
 .head
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
     background-color: var(--accent-color);
 }
 .logo
 {
+    display: flex;
     position: relative;
-    padding: 10px 0px 0px 150px;
+    padding: 0px 0px 0px 150px;
+}
+.nav
+{
+    margin-left: 50px;
 }
 .nav a
 {
-    font-family: var(--second-font-family);
-    padding: 15px;
-    margin: 10px 0px 0px 0px;
-    position: relative;
+    font-family: var(--font-family);
+    padding: 25px;
+    position: flex;
+    font-size: 1.2em;
     display: inline-block;
     text-decoration: none;
     color: white;
-}
-.social-media-logo a
-{
-    padding: 10px;
 }
 .header-dot-style {
     color: red;
     
 }
+.social-media-logos
+{
+    margin: 0px 125px 0px 275px;
+    padding-top: 15px;
+    display: inline-block;
+}
+.social-media-logos a
+{
+    margin: 5px;
+}
 .front-page img
 {
     max-width: 100%;
+    display: flex;
 }
 
 #about-us {
