--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,11 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap');
 .front-page {
     background-image: url(../img/background.jfif);
     background-size: cover;
     background-position: center;
+}
+.front-page-text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding-left: 10%;
+    padding-left: 8%;
     min-height: 800px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 100;
 }
+.front-page-text h1 {
+    color: var(--accent-color);
+    font-size: 7em;
+}
+.front-page-text p {
+    color: #9b9b9b;
+    font-size: 1.5em;
+}
+#front-page-collections, #front-page-dot {
+    color: red;
+}
+.shop-now-button {
+        padding: 0.35em 1.2em;
+        border: none;
+        margin: 0 0.3em 0.3em 0;
+        border-radius: 0.12em;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        transition-duration: 0.7s;
+        background-color: red;  
+        font-size: 1.5em;
+        font-family: 'PT Sans', cursive;
+}
+  .shop-now-button:hover {
+    color: white;
+    background-color: var(--accent-color);
+    cursor: pointer;
+  }
