--- a/css/css-main-collection.css
+++ b/css/css-main-collection.css
@@ -10,8 +10,10 @@
   
 }
 .shop-our-main {
+    color: #717474;
     font-family: 'PT Sans', sans-serif;
     font-size: 20px;
     text-align: center;
+
     
 }
