--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url(../css/front-page.css);
 @import url(../css/footer.css);
 @import url(../css/about-us.css);
+@import url(../css/new-arriwals.css);
 
 * {
     margin: 0;
