--- a/css/keep-fit-with-comfort.css
+++ b/css/keep-fit-with-comfort.css
@@ -3,8 +3,10 @@
 }
 .keep-fit-with-confort {
     position: absolute;
-    
-   
+      padding-top: 2em;
+      color: #fff;
+      padding-left: 50%;
+     
 }
 .learn-more {
     padding: 0.35em 1.2em;
