mid-season-get-your-discount block styles added

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 @import url(../css/footer.css);
 @import url(../css/about-us.css);
 @import url(../css/new-arriwals.css);
+@import url(../mid-season-get-your-discount.css);
 
 * {
     margin: 0;
