--- a/css/product-page.css
+++ b/css/product-page.css
@@ -1,47 +1,39 @@
-.return-period
-{
-    text-align: center;
+.return-period {
+    display: flex;
+    justify-content: center;
     font-family: var(--font-family);
     color: white;
     background-color: red;
 }
-.head
-{
-    display: flex;
+header .container {
     background-color: var(--accent-color);
-}
-.logo
-{
     display: flex;
-    position: relative;
-    padding: 0px 0px 0px 150px;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
 }
-.nav
-{
-    margin-left: 50px;
+@media (max-width: 320px) {
+    header .container {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
-.nav a
-{
+.logo img {
+        max-width: 100%;
+        display: flex;
+}
+.container .nav a {
     font-family: var(--font-family);
     padding: 25px;
-    position: flex;
     font-size: 1.2em;
-    display: inline-block;
     text-decoration: none;
     color: white;
 }
-.social-media-logos
-{
-    margin: 0px 125px 0px 275px;
-    padding-top: 15px;
-    display: inline-block;
+.container .social-media-logos a {
+    padding: 5px;
 }
-.social-media-logos a
-{
-    margin: 5px;
-}
-.front-page img
-{
-    max-width: 100%;
-    display: flex;
+@media (max-width: 990px) {
+    .container .social-media-logos {
+        display: none;
+    }
 }
