--- a/css/header.css
+++ b/css/header.css
@@ -40,7 +40,7 @@ header .container {
 @media (max-width: 320px) {
     header .container {
         display: flex;
-        flex-wrap: wrap;
+        justify-content: space-between;
     }
 }
 .logo img {
