--- a/css/product-page.css
+++ b/css/product-page.css
@@ -1,9 +1,14 @@
+
 .return-period {
     display: flex;
     justify-content: center;
     font-family: var(--font-family);
     color: white;
     background-color: red;
+}
+header {
+    position: fixed;
+    width: 100%;
 }
 header .container {
     background-color: var(--accent-color);
@@ -12,15 +17,9 @@ header .container {
     justify-content: space-around;
     padding: 10px;
 }
-@media (max-width: 320px) {
-    header .container {
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
 .logo img {
-        max-width: 100%;
-        display: flex;
+    max-width: 100%;
+    display: flex;
 }
 .container .nav a {
     font-family: var(--font-family);
@@ -31,9 +30,4 @@ header .container {
 }
 .container .social-media-logos a {
     padding: 5px;
-}
-@media (max-width: 990px) {
-    .container .social-media-logos {
-        display: none;
-    }
 }
