--- a/css/keep-fit-with-comfort.css
+++ b/css/keep-fit-with-comfort.css
@@ -1,15 +1,40 @@
+
 #workout-woman{
     position: relative;
+    width: 100%;
 }
 .keep-fit-with-confort {
     position: absolute;
       padding-top: 2em;
       color: #fff;
       padding-left: 50%;
-     
+    }
+.original-brand {
+  font-size: 24px;
+    line-height: 1.36;
+    font-family: Bebas Neue,cursive;
+    color: rgba(255,255,255,0.62);
 }
-.learn-more {
-    padding: 0.35em 1.2em;
+.keep-fit{
+  font-size: 62px;
+    color: white;
+    line-height: 1;
+    font-family: Bebas Neue,cursive;
+}
+.keep-fit-with-confort-icon {
+  font-size: 16px;
+    line-height: 1.7;
+    font-family: PT Sans,sans-serif;
+    color: rgba(255,255,255,0.62);
+}
+.workout-offers-fitness {
+  font-size: 20px;
+  line-height: 1.5;
+  font-family: PT Sans,sans-serif;
+  color: rgba(255,255,255,0.62);
+}
+.keep-learn-more {
+    padding: 18px 30px;
     border: 0.1em solid white;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
@@ -18,19 +43,21 @@
     text-align: center;
     transition: color 0.7s;
     background-color: transparent;
+    font-size: 16.5px!important;
+    line-height: 1.3333em!important;
   }
-  .learn-more:hover {
+  .keep-learn-more:hover {
     color: black;
     background-color: white;
     cursor: pointer;
   }
   
-  .card-learn-more:hover {
+  .keep-learn-more:hover {
     border-color: black;
     color: black;
   }
   
-  .card-learn-more:hover {
+  .card-keep-learn-more:hover {
     background-color: black;
     color: white;
   }
