--- a/css/new-arriwals.css
+++ b/css/new-arriwals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap');
 
 .menu-new-arrivals {
      margin: 10% auto;
@@ -7,6 +8,22 @@
      justify-content: space-between;
      width: 980px;
      
+}
+
+.menu-newarriwals {
+    font-family: 'Bebas Neue'
+}
+
+.newarrival-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.text-trainers{
+    font-family: 'Bebas Neue'
+}
+
+.text-hot-sale {
+    font-family: 'Bebas Neue'
 }
 
 .block-new-arrival {
