--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 @import url(new-arriwals.css);
 @import url(mid-season-get-your-discount.css);
 @import url(burger-menu.css);
+@import url(why-choose-us.css);
 
 * {
     margin: 0;
