--- a/css/new-arriwals.css
+++ b/css/new-arriwals.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap');
 
 .menu-new-arrivals {
      margin: 10% auto;
@@ -11,19 +10,27 @@
 }
 
 .menu-newarriwals {
-    font-family: 'Bebas Neue'
+    font-family: 'Bebas Neue';
 }
 
 .newarrival-button {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: 'PT sans';
 }
 
 .text-trainers{
-    font-family: 'Bebas Neue'
+    font-family: 'Bebas Neue';
+}
+
+.trainers-buttom {
+    font-family: 'PT sans';
 }
 
 .text-hot-sale {
-    font-family: 'Bebas Neue'
+    font-family: 'Bebas Neue';
+}
+
+.hot-sale-buttom {
+    font-family: 'PT sans';
 }
 
 .block-new-arrival {
