--- a/css/why-choose-us.css
+++ b/css/why-choose-us.css
@@ -1,2 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap');
 
+.text-why-choose-us {
+    font-family: 'Bebas Neue';
+}
+
+.text-keep-fit {
+    font-family: 'PT sans';
+}
+
+.text-free-shiping-over {
+    font-family: 'Bebas Neue';
+}
+
+.text-get-advatage {
+    font-family: 'PT sans';
+}
+
+.text-easy-day-return {
+    font-family: 'Bebas Neue';
+}
+
+.text-if-the-item {
+    font-family: 'PT sans';
+}
+
+.text-eco-materials {
+    font-family: 'Bebas Neue';
+}
+
+.text-all-items-are-made {
+    font-family: 'PT sans';
+}
+
+.text-payment-methods {
+    font-family: 'Bebas Neue';
+}
+
+.text-pay-for-your {
+    font-family: 'PT sans';
+}
