--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import url(mid-season-get-your-discount.css);
 @import url(burger-menu.css);
 @import url(why-choose-us.css);
+@import url(newsletter.css);
 
 * {
     margin: 0;
