--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@
 @import url(new-arriwals.css);
 @import url(mid-season-get-your-discount.css);
 @import url(why-choose-us.css);
+@import url(deal-of-the-month.css);
+@import url(arrivals.css);
 
 * {
     margin: 0;
