--- a/css/index.css
+++ b/css/index.css
@@ -8,10 +8,12 @@
 @import url(mid-season-get-your-discount.css);
 @import url(why-choose-us.css);
 @import url(newsletter.css);
+@import url(deal-of-the-month.css);
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 :root {
     --text-color: #fff;
