--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 @import url(why-choose-us.css);
 @import url(newsletter.css);
 @import url(deal-of-the-month.css);
+@import url(arrivals.css);
 
 * {
     margin: 0;
